# ai-server-terminal

./: .dockerignore  .env.example  .gitignore  .notification_config.example.json  AGENTS.md  LICENSE  LINUX_UI_WORKSPACE_PLAN.md  LOVABLE_FRONTEND_PROMPT.txt  PRODUCTION_READINESS_PLAN.md  README.md  bootstrap-config.ps1  bootstrap-linux.sh  create_mega_pipeline.py  create_pipeline.sql  docker-compose.postgres-mcp.yml  docker-compose.production.smoke.yml  docker-compose.production.yml  docker-compose.yml  eslint.config.js  index.html  key_mcp.py  key_mcp.py.new  keycloak_profiles.json  manage.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-full.txt  requirements-mini.txt  requirements.txt  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.playwright-cli/: page-2026-03-12T12-27-10-884Z.yml  page-2026-03-12T12-27-49-690Z.yml  page-2026-03-12T12-38-27-712Z.yml  page-2026-03-12T23-27-24-436Z.yml  page-2026-03-12T23-28-22-316Z.yml  page-2026-03-12T23-28-22-471Z.yml  page-2026-03-12T23-30-44-889Z.yml  page-2026-03-12T23-30-45-007Z.yml  page-2026-03-12T23-31-11-228Z.yml  page-2026-03-12T23-31-32-917Z.yml  page-2026-03-12T23-31-53-212Z.yml  page-2026-03-12T23-32-13-550Z.yml  page-2026-03-12T23-32-58-579Z.yml  page-2026-03-12T23-33-19-305Z.yml  page-2026-03-12T23-34-11-038Z.yml  page-2026-03-12T23-35-13-293Z.yml  page-2026-03-12T23-35-40-432Z.yml  page-2026-03-12T23-36-09-172Z.yml  page-2026-03-12T23-40-55-779Z.yml  page-2026-03-12T23-41-37-129Z.yml  page-2026-03-12T23-41-54-812Z.yml  page-2026-03-12T23-42-05-736Z.yml  page-2026-03-12T23-43-14-381Z.yml  page-2026-03-12T23-43-46-795Z.yml
ai-server-terminal-main/: .env.example  eslint.config.js  index.html  package-lock.json  (+4 more)
(+300 files in other folders)
