[project]
name = "weu-ai-platform"
version = "2.0.0"
description = "WEU AI Agent Platform - DevOps/IT task automation"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "node_modules",
    ".eggs",
    "*.egg",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (временно)
    "E722",   # bare except (временно, будем исправлять постепенно)
    "B904",   # raise without from (временно)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "core_ui", "agent_hub", "tasks", "servers", "passwords", "web_ui"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "web_ui.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
testpaths = ["tests", "app", "core_ui", "agent_hub", "tasks", "servers", "passwords"]

[tool.coverage.run]
source = ["app", "core_ui", "agent_hub", "tasks", "servers", "passwords"]
omit = ["*/migrations/*", "*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
